# dailydig

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
backend/: app.py  config.py
backend/agents/: analysis_agent.py  delivery_agent.py  discovery_agent.py  feedback_agent.py  planner_agent.py  ranking_agent.py  taste_model_agent.py
backend/database/: db.py  repositories.py
backend/evaluation/: metrics.py
backend/graph/: state.py  workflow.py
backend/models/: __init__.py  dig_queue.py  evaluation_metrics.py  feedback.py  recommendation_history.py  taste_profile.py  track.py
backend/routes/: auth.py  discovery_path.py  evaluation.py  feedback.py  playlist.py  recommendation.py  taste.py
backend/scheduler/: daily_job.py
backend/services/: knowledge_graph_service.py  notification_service.py  queue_service.py  spotify_auth.py  spotify_service.py  telegram_handler.py
docs/plans/: 01-poetry-project-init.md  02-docker-infrastructure.md  03-config-env.md  04-database-setup.md  05-sqlalchemy-models.md  06-repositories.md  07-fastapi-app-entry.md  08-spotify-auth.md  09-spotify-service.md  10-queue-service.md  11-playlist-import-api.md  12-analysis-agent.md  13-delivery-agent.md  14-trigger-recommendation-api.md  15-feedback-agent.md  16-taste-model-agent.md  17-taste-profile-api.md  18-planner-agent.md  19-discovery-agent.md  20-ranking-agent.md  20b-auto-discovery-wiring.md  README.md  (+7 more)
tests/: conftest.py  test_discovery.py  test_queue.py  test_ranking.py  test_taste_update.py  test_workflow.py
(+15 files in other folders)
