[tool.poetry]
name = "dailydig"
description = "Daily Music Discovery Agent"
version = "0.1.0"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = ">=0.115"
uvicorn = {version = ">=0.34", extras = ["standard"]}
sqlalchemy = {version = ">=2.0", extras = ["asyncio"]}
asyncpg = ">=0.30"
alembic = ">=1.14"
redis = {version = ">=5.0", extras = ["hiredis"]}
spotipy = ">=2.24"
anthropic = ">=0.49"
langgraph = ">=0.3"
python-telegram-bot = ">=21.0"
apscheduler = ">=3.10"
pydantic-settings = ">=2.0"
httpx = ">=0.28"
greenlet = "^3.3.2"
neo4j = ">=5.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0"
pytest-asyncio = ">=0.25"
pytest-cov = "*"
ruff = "*"
mypy = "*"
aiosqlite = "*"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
